Added bootstrap, login component styles, navbar styles, filters styles and profile styles

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#main {
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.mt-4 {
+  margin-top: 4rem!important;
+}
