--- a/src/components/AdvertList/AdvertList.css
+++ b/src/components/AdvertList/AdvertList.css
@@ -4,7 +4,9 @@
     justify-content: space-around;
 }
 
-
+.adverts-container .card {
+    margin-bottom: 3rem;;
+}
 
 
 @media(min-width: 576px) {
@@ -12,19 +14,19 @@
         flex-flow: row wrap;
     }
     
-    .card {
+    .adverts-container .card {
         flex-basis: 40%;
     }
 }
 
 @media(min-width: 768px) {
-    .card {
+    .adverts-container .card {
         flex-basis: 30%;
     }
 }
 
 @media(min-width: 992px) {
-    .card {
+    .adverts-container .card {
         flex-basis: 20%;
         margin-right: 1rem;
     }
