--- a/src/components/Advert/Advert.css
+++ b/src/components/Advert/Advert.css
@@ -17,6 +17,9 @@
     background-color: rgba(255, 230, 0, 0.7);
     font-weight: bold;
 }
+.pointer .card-img-top {
+    height: 300px;
+}
 
 .type-badge-buy {
     background-color: red;
